--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,29 +1,12 @@
-
-/*
- * This is a manifest file that'll be compiled into application.css, which will include all the files
- * listed below.
- *
- * Any CSS (and SCSS, if configured) file within this directory, lib/assets/stylesheets, or any plugin's
- * vendor/assets/stylesheets directory can be referenced here using a relative path.
- *
- * You're free to add application-wide styles to this file and they'll appear at the bottom of the
- * compiled file so the styles you add here take precedence over styles defined in any other CSS
- * files in this directory. Styles in this file should be added after the last require_* statement.
- * It is generally better to create a new file per style scope.
- */
-
 /* Importando o Bootstrap */
 @import "bootstrap";
 
- /* #importando home.css */ 
-@import "home";
+@import "sass/config"; // Importando variáveis e mixins
 
- /* #importando home.css 
- @import "font-awesome-sprockets";
+/* Importando o arquivo home.scss */
+@import "sass/home";
 
 @import "font-awesome";
 
+// app/assets/stylesheets/application.scss
 
-
-
-*/ 
